new tables models controller and api endpoints for articles and tags
